add app.rb logic

--- a/views/project.erb
+++ b/views/project.erb
@@ -20,8 +20,8 @@
     <label for="name">volunteer name</label>
     <input id="name" name="song_name" class="form-control" type="text">
   </div>
-  <button type="submit" class="btn">Add song</button>
+  <button type="submit" class="btn">Add volunteer</button>
 </form>
 
-<p><a href="/projects/<%= @projuct.id %>/edit">edit album</a></p>
-<a href="/projectss">Return to the project list</a>
+<p><a href="/projects/<%= @project.id %>/edit">edit album</a></p>
+<a href="/projects">Return to the project list</a>volunteer
