--- a/views/projects.erb
+++ b/views/projects.erb
@@ -11,4 +11,4 @@
   <p>There are curently no projects to display.</p>
 <% end %>
 
-<a href="/projects/new">Add a new project</a>
+<a href="/projects/new">Create project</a>
