--- a/views/new_project.erb
+++ b/views/new_project.erb
@@ -2,8 +2,8 @@
 
 <form action="/projects" method="post">
   <div class="form-group">
-    <label for="name">Project name</label>
-    <input id='n' name="project_name" class="form-control" type="text">
+    <label for="project_title">Project name</label>
+    <input id='n' name="project_title" class="form-control" type="text">
   </div>
   <button type="submit" class="btn">Go!</button>
 </form>
