--- a/views/edit_project.erb
+++ b/views/edit_project.erb
@@ -11,8 +11,8 @@
 
 <p><a href="/projects">Return to project list</a></p>
 
-<form action="/projects<%= @project.id() %>" method="post">
+<form action="/projects/<%= @project.id() %>" method="post">
   <input name="_method" type="hidden" value="delete">
 
-  <button type="submit">Delete project</button>
+<button type="submit">Delete Project</button>
 </form>
