--- a/views/project.erb
+++ b/views/project.erb
@@ -6,7 +6,7 @@
   <% if @project.volunteers %>
     <ul>
       <% @project.volunteers.each do |volunteer| %>
-        <li><a href="/projects/<%= @project.id %>/volunteers/<%= volunteer.id %>"><%= volunteer.name %></a></li>
+        <li><%= volunteer.name %></li>
       <% end %>
     </ul>
   <% else %>
